# rust-histogram

./: Cargo.toml  LICENSE  README.md
bench/: Cargo.toml  README.md  script.py
bench/src/: main.rs
crates/hist/: Cargo.toml
crates/hist-axes/: Cargo.toml
crates/hist-axes/src/: axis.rs  bin.rs  category.rs  integer.rs  lib.rs  uniform.rs  variable.rs
crates/hist-dense/: Cargo.toml
crates/hist-dense/src/: lib.rs  vechist.rs
crates/hist-sparse/: Cargo.toml
crates/hist-sparse/src/: hashmaphist.rs  lib.rs  sparsehist.rs
crates/hist-storages/: Cargo.toml
crates/hist-storages/src/: lib.rs
crates/hist/src/: lib.rs
src/: axis.rs  hist.rs  main.rs
