[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Peter Fackeldey"]
edition = "2021"
repository = "https://github.com/pfackeldey/rust-histogram"
readme = "README.md"

[workspace.dependencies]
hist-axes = { path = "crates/hist-axes", version = "0.1.0" }
hist-dense = { path = "crates/hist-dense", version = "0.1.0" }
hist-sparse = { path = "crates/hist-sparse", version = "0.1.0" }
hist-storages = { path = "crates/hist-storages", version = "0.1.0" }
hist = { path = "crates/hist", version = "0.1.0" }
anyhow = "*"
thiserror = "*"
num-traits = "*"
