[package]
name = "hist_bench"
version = "0.1.0"
authors = ["Peter Fackeldey"]
edition = "2021"

[dependencies]
hist-axes = { path = "../crates/hist-axes", version = "0.1.0" }
hist-dense = { path = "../crates/hist-dense", version = "0.1.0" }
hist-sparse = { path = "../crates/hist-sparse", version = "0.1.0" }
hist-storages = { path = "../crates/hist-storages", version = "0.1.0" }
hist = { path = "../crates/hist", version = "0.1.0" }
anyhow = "*"
thiserror = "*"
num-traits = "*"
rand = "*"

[workspace]
