[package]
name = "hist"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
hist-axes = { workspace = true }
hist-storages = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
